fix: header z-index

--- a/assets/styles/blocks/header.css
+++ b/assets/styles/blocks/header.css
@@ -2,7 +2,7 @@
   position: fixed;
   left: 0;
   right: 0;
-  z-index: 10;
+  z-index: 20;
   background-color: var(--color-dark);
 }
 
